testsuite/tests/parser/should_fail/readFail020.stderr

readFail020.hs:3:16: error: [GHC-58481] parse error on input ‘}’
